[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Karn Wong <contact@karnwong.me>"]
packages = [
    { include = "playground", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
